# go_game_allegro

./: .gitignore  CMakeLists.txt  README.md  prototype.h  sauvegarde.txt  stat.txt
src/: graphisme.c  ia.c  joueurs.c  main.c  regles.c
